--- a/sites/default/config/core.entity_view_display.node.event.mini_teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.event.mini_teaser.yml
@@ -20,7 +20,7 @@ mode: mini_teaser
 content:
   field_date_and_time:
     weight: 0
-    label: above
+    label: hidden
     settings:
       format_type: medium
       timezone_override: ''
