--- a/sites/default/config/core.entity_view_display.node.film.teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.film.teaser.yml
@@ -20,6 +20,7 @@ dependencies:
     - field.field.node.film.field_production
     - field.field.node.film.field_screening
     - field.field.node.film.field_screenplay
+    - field.field.node.film.field_selection
     - field.field.node.film.field_set_design
     - field.field.node.film.field_shooting
     - field.field.node.film.field_sound
@@ -80,6 +81,7 @@ hidden:
   field_production: true
   field_screening: true
   field_screenplay: true
+  field_selection: true
   field_set_design: true
   field_shooting: true
   field_sound: true
