--- a/sites/default/config/core.entity_view_display.node.location.default.yml
+++ b/sites/default/config/core.entity_view_display.node.location.default.yml
@@ -29,7 +29,7 @@ content:
   field_geofield:
     type: leaflet_formatter_default
     weight: 4
-    label: above
+    label: hidden
     settings:
       leaflet_map: 'OSM Mapnik'
       height: 400
