--- a/sites/default/config/core.entity_view_display.node.event.slider.yml
+++ b/sites/default/config/core.entity_view_display.node.event.slider.yml
@@ -53,7 +53,7 @@ content:
     type: image
   field_long_text:
     weight: 3
-    label: above
+    label: hidden
     settings:
       trim_length: 600
     third_party_settings: {  }
