--- a/sites/default/config/core.entity_view_display.node.film.list.yml
+++ b/sites/default/config/core.entity_view_display.node.film.list.yml
@@ -20,6 +20,7 @@ dependencies:
     - field.field.node.film.field_production
     - field.field.node.film.field_screening
     - field.field.node.film.field_screenplay
+    - field.field.node.film.field_selection
     - field.field.node.film.field_set_design
     - field.field.node.film.field_shooting
     - field.field.node.film.field_sound
@@ -37,24 +38,44 @@ targetEntityType: node
 bundle: film
 mode: list
 content:
-  field_date_and_time:
-    weight: 1
+  field_content_reference:
+    type: entity_reference_label
+    weight: 0
     label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+  field_date_and_time:
+    weight: 2
+    label: hidden
     settings:
       timezone_override: ''
       format_type: medium
     third_party_settings: {  }
     type: datetime_default
+  field_director:
+    type: entity_reference_label
+    weight: 0
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+  field_duration:
+    type: text_default
+    weight: 0
+    label: above
+    settings: {  }
+    third_party_settings: {  }
   field_image:
     type: image
-    weight: 2
+    weight: 0
     label: hidden
     settings:
       image_style: schedule_style
       image_link: content
     third_party_settings: {  }
   field_title_original:
-    weight: 0
+    weight: 1
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -63,10 +84,7 @@ hidden:
   body: true
   field_cast: true
   field_contact: true
-  field_content_reference: true
   field_country: true
-  field_director: true
-  field_duration: true
   field_editing: true
   field_festivals: true
   field_music: true
@@ -74,6 +92,7 @@ hidden:
   field_production: true
   field_screening: true
   field_screenplay: true
+  field_selection: true
   field_set_design: true
   field_shooting: true
   field_sound: true
