--- a/sites/default/config/views.view.schedule_page.yml
+++ b/sites/default/config/views.view.schedule_page.yml
@@ -625,7 +625,7 @@ display:
           type: datetime_custom
           settings:
             timezone_override: ''
-            date_format: 'd. M'
+            date_format: 'l d. M'
           group_column: value
           group_columns: {  }
           group_rows: true
