--- a/sites/default/config/core.extension.yml
+++ b/sites/default/config/core.extension.yml
@@ -10,6 +10,7 @@ module:
   color: 0
   comment: 0
   config: 0
+  config_translation: 0
   contact: 0
   context: 0
   context_ui: 0
@@ -36,6 +37,7 @@ module:
   leaflet: 0
   leaflet_views: 0
   link: 0
+  locale: 0
   menu_ui: 0
   node: 0
   options: 0
