--- a/sites/default/config/core.entity_view_display.node.film.teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.film.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.film.body
+    - field.field.node.film.field_camera
     - field.field.node.film.field_cast
     - field.field.node.film.field_contact
     - field.field.node.film.field_content_reference
@@ -68,6 +69,7 @@ content:
       trim_length: 600
     third_party_settings: {  }
 hidden:
+  field_camera: true
   field_cast: true
   field_contact: true
   field_content_reference: true
