--- a/sites/default/config/views.view.schedule.yml
+++ b/sites/default/config/views.view.schedule.yml
@@ -36,7 +36,7 @@ display:
       query:
         type: views_query
         options:
-          disable_sql_rewrite: false
+          disable_sql_rewrite: true
           distinct: false
           replica: false
           query_comment: ''
@@ -374,10 +374,10 @@ display:
         options:
           relationship: none
           view_mode: list
+      rendering_language: '***LANGUAGE_language_interface***'
     cache_metadata:
       max-age: -1
       contexts:
-        - 'languages:language_content'
         - 'languages:language_interface'
         - url
         - url.query_args
