--- a/sites/default/config/core.entity_view_display.node.film.slider.yml
+++ b/sites/default/config/core.entity_view_display.node.film.slider.yml
@@ -61,7 +61,7 @@ content:
     type: text_default
   field_content_reference:
     weight: 19
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
@@ -75,10 +75,10 @@ content:
     type: entity_reference_label
   field_date_and_time:
     weight: 2
-    label: above
+    label: hidden
     settings:
-      format_type: medium
       timezone_override: ''
+      format_type: short
     third_party_settings: {  }
     type: datetime_default
   field_director:
@@ -154,7 +154,7 @@ content:
   field_selection:
     type: entity_reference_label
     weight: 22
-    label: above
+    label: hidden
     settings:
       link: false
     third_party_settings: {  }
