--- a/sites/default/config/field.field.node.film.field_date_and_time.yml
+++ b/sites/default/config/field.field.node.film.field_date_and_time.yml
@@ -14,7 +14,7 @@ bundle: film
 label: 'Date and time'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
