--- a/sites/default/config/views.view.film_event_location.yml
+++ b/sites/default/config/views.view.film_event_location.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.mini_teaser
   module:
+    - datetime
     - node
     - user
 id: film_event_location
@@ -50,7 +51,7 @@ display:
       pager:
         type: some
         options:
-          items_per_page: 5
+          items_per_page: 50
           offset: 0
       style:
         type: default
@@ -160,21 +161,19 @@ display:
           entity_field: langcode
           plugin_id: language
       sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
-          order: DESC
-          entity_type: node
-          entity_field: created
-          plugin_id: date
+        field_date_and_time_value:
+          id: field_date_and_time_value
+          table: node__field_date_and_time
+          field: field_date_and_time_value
           relationship: none
           group_type: group
           admin_label: ''
+          order: ASC
           exposed: false
           expose:
             label: ''
-          granularity: second
+          granularity: minute
+          plugin_id: datetime
       title: 'Film & Event location'
       header: {  }
       footer: {  }
